delete: lp for db
